assets/css/style.scss
---
---



$font-family-sans-serif:  Tahoma, Arial, sans-serif;

$icon-font-path: '../fonts/';
$component-offset-horizontal: 120px;
$body-bg: #fff;
$font-size-base: 1rem;
$grid-gutter-width-base: 20px;

$brand-primary: rgb(255,90,1);
$navbar-padding-x: 0;
$navbar-padding-y: 0;

$nav-pills-border-radius: 0;

$card-spacer-x: 1rem;

$carousel-control-opacity: 0.75;


@import "bootstrap/bootstrap";
@import "select2/core.scss";


$footer-background: $gray-dark;
$navbar-bg: rgba(#f0f0f0, 0.95);


body > #page {
  background-color: $body-bg;
  padding-bottom: $line-height-base;
}

body {
  background-color: $footer-background;
  border-top: 50px solid $body-bg;
}
footer {
  background-color: $footer-background;
  color: $gray-lighter;

  &>.container {
    padding-top: 10px;
  }
}
.navbar-brand {
  padding: 0;
  line-height: 50px;
  height: 50px;
  display: block;
  &> img {
    height: 50px;
    display: block;
    position: absolute;
    right: 0;
    @include media-breakpoint-up(sm) {
      left: 0;
    }
    @include media-breakpoint-up(lg) {
      height: 70px;
    }
  }

}
.nav {
  .flag {
    a {
      padding:0;
      img {
        display: block;
        width: auto;
        height: 50px;
      }
    }
  }
}
.navbar {
  border-bottom: 1px solid darken($navbar-bg, 6.5%);
  .navbar-nav {
    .nav-item {
      .nav-link {
        line-height: 22px;
        padding: 14px 8px;
        font-size: 0.9rem;
        @include media-breakpoint-up(lg) {
          padding: 14px;
          font-size: 1rem;
        }
        &:hover {
          background-color: lighten($brand-primary, 33.333%)
        }
      }
      &.active {
        .nav-link {
          background-color: $brand-primary;
          color: #f0f0f0;
        }
      }
    }
  }
  &.navbar-toggleable-sm {
    .container {
      @include media-breakpoint-down(sm) {
        margin: 10px;
        .navbar-toggler {
          float: left;
        }
      }
    }
  }
}
.bg-faded {
  background-color: $navbar-bg;
}

.carousel-cover-image {
  height: 500px;
  background-size: cover;
  background-position: center;
}
.carousel-caption {
  background: rgba(0,0,0, 0.5);
  color: rgba(255,255,255, 0.9);
  left: 0;
  right: 0;
  bottom: 0;
}
.profile-image {
  img {
    max-width: 100%;
  }
  margin-bottom: 1em;
}

.team-member {
  h3 {
    margin-top: 0;
  }
}

.service-cover {
  width: 125px;
}

// @TODO
// #contact_page {
//   @media (max-width: $dl-horizontal-breakpoint - 1) {
//     dd {
//       margin-bottom: $line-height-base;
//     }
//   }
// }
#portfolio_filters-sticky-wrapper {
  z-index: 100;
  position: relative;
}
#portfolio_filters {
  background: rgba(255,255,255, 0.9);
  padding: 10px 0;
}
// #porfolio_grid {
//   .portfolio-item {
//     @extend .col-md-3;
//     @extend .col-sm-4;
//     @extend .col-6;

//     img {
//       width: 100%;
//     }
//     h2 {
//       font-size: $font-size-h5;
//       text-align: center;
//       font-weight: normal;
//       margin:0 0 1em 0;
//     }

//     .card {
//       background: #fafafa;
//       border: 1px solid $gray-lighter;
//       margin-top: $grid-gutter-width-base / 2;
//       margin-bottom: $grid-gutter-width-base / 2;
//       overflow: hidden;
//       .card-content {
//         padding: $grid-gutter-width-base / 2;
//       }
//     }

//     p.labels {
//       text-align: right;
//       margin: 0;
//       font-size:0;
//       line-height: 0;
//       span.label {
//         font-size: 12px;
//         line-height: 2em;
//         margin-left: 0.2em;
//         font-weight: lighter;
//         padding: 0.25em 0.6em;
//         color: #808080;
//         background-color: rgba(0,0,0, 0.06);
//       }
//     }

//     .image-container {
//       width: 100%;
//       padding-bottom: 100%;
//       position: relative;
//       height: 0;
//       overflow: hidden;
//       img {
//         display: block;
//         width: 100%;
//         height: 100%;
//         position: absolute;
//         left:0;
//         transition: all .3s ease-in-out;
//       }
//       img:nth-child(2) {
//         opacity: 0;
//       }
//       &:hover {
//         img:nth-child(2) {
//           opacity: 1;
//         }
//       }
//     }
//   }
// }


#portfolio_page {
  // .card-columns {
  //   @include media-breakpoint-only(lg) {
  //     column-count: 4;
  //   }
  //   @include media-breakpoint-only(xl) {
  //     column-count: 5;
  //   }
  // }

  .card {
    &.has-images {
      .card-block {
        padding-top: 100%;
        margin-top: $spacer-y;
      }
    }
    img.card-img-top {
      position: absolute;
      left:0;
      transition: all .3s ease-in-out;
      &:nth-child(2) {
        opacity: 0;
      }
      &:hover {
        &:nth-child(2) {
          opacity: 1;
        }
      }
    }
    .card-title {
      text-align: center;
    }
    .tags {
      text-align: right;
      span {
        font-weight: lighter;
        font-size: 0.6rem;
        font-style: italic;
        color: #aaa;
        white-space: nowrap;

        &:after {
          content: ', ';
        }
        &:last-child:after {
          content: '';
        }
      }
    }
  }
}

#contact_page {
  dl {
    @extend .row;
    dt {
      @extend .col-md-2;
      @extend .text-right;
      &:after {
        content: ':';
      }
    }
    dd {
      @extend .col-md-10;
      p {
        margin:0;
      }
      &+dd {
        @extend .offset-md-2;
      }

    }
  }
}

.row {
  &.copyright {
    margin: 1em 0 0;
    color: lighten($footer-background, 25%);
    @extend .small;
  }
  &.our-values {
    div {
      img {
        width: 3em;
        height: 3em;
        margin-right: 0.5em;
      }
      p {
        margin: 0;
        font-size: 0.8em;
        line-height: 1.25em;
        @extend .text-center;
      }
    }
  }
}

#map {
  height: 400px;
  margin-bottom: 2rem;
}

